--- a/matrimony-ui/src/index.html
+++ b/matrimony-ui/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>MatrimonyUi</title>
   <base href="/">
-
+  <!-- <script src='https://cdn.jsdelivr.net/gh/naptha/tesseract.js@v1.0.14/dist/tesseract.min.js'></script> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
